fixed launch card overflow and added footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,17 @@
 
-  
+  .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 30px;
+    background-color:rgb(32, 32, 32);
+    color: white;
+    text-align: center;
+    font-size: 15px;
+    padding-top: 5px;
+    margin-top: 20px;
+  }
 
 #login-body {
     color: whitesmoke;
@@ -133,7 +145,7 @@
 }
 
 #twitter-box {
-  height: 500px;
+  height: 600px;
   width: 100%;
   overflow-y: scroll;
   float: left;
@@ -141,6 +153,7 @@
   border-width: 2px;
   border-color: steelblue;
   border-radius: 3px;
+  margin-bottom: 100px;
 }
 
 #map {
@@ -163,20 +176,32 @@
 border-style: solid;
 border-width: 3px;
 border-color: steelblue;
+overflow-y: scroll;
 }
 
 .card-deck{
   margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.card-title {
+  background-color: whitesmoke;
+  margin-bottom: 0px;
+}
+
+.card-text {
+  background-color: white;
+  margin-bottom: 0px;
 }
 
 .card{
   color: black;
-  max-height: 500px;
+  max-height: 400px;
   max-width: 300px;
 }
 
 .card-img-top{
-  height: 50%;
+  height: 100%;
   object-fit: cover;
 
 }
